# python_project

./: .gitignore  README.md  prezentacja.ipynb  pyproject.toml  wyniki.txt
analysis_pkg/: analiza.py  parser.py  presentation.ipynb  prezentacja.ipynb  prezentacja.py  profile.stats  profile.txt  tests.py  testy.py
analysis_pkg/data/raw/: pozary.csv  tabela02.xls
analysis_pkg_yourname.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
